add unit tests for all item types